@@ -17,9 +17,9 @@ def test_upload_file_incomplete_aws_credentials():
 
 def test_upload_file_invalid_types():
     # Wrong ID
-    assert_raises(TypeError, s3.load, aws_id=123)
+    assert_raises(TypeError, s3.load, aws_access_key_id=123)
     # Wrong access key
-    assert_raises(TypeError, s3.load, aws_access_key=True)
+    assert_raises(TypeError, s3.load, aws_secret_access_key=True)
     # Wrong bucket name
     assert_raises(TypeError, s3.load,  s3_bucket=123)
     assert_raises(ValueError, s3.load, s3_bucket='')
